objects/Bill_To_Ship_To__c.object
<CustomObject>
    <fields>
        <fullName>Account_Name__c</fullName>
        <formula>Account__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Enter the legal name of the customer.</inlineHelpText>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Name_to_Text__c</fullName>
        <formula>Account__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Name to Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Bill To/Ship To</relationshipLabel>
        <relationshipName>Bill_To_Ship_To</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Attention_To__c</fullName>
        <inlineHelpText>Enter specific individual/department the invoice should be sent to, if any.</inlineHelpText>
        <label>Attention To</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_To__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Bill To</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <inlineHelpText>Customer Billing City</inlineHelpText>
        <label>City</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Fax__c</fullName>
        <label>Fax</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_Address_ID__c</fullName>
        <externalId>true</externalId>
        <label>Legacy Address ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Move_to_accounting_system__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Move to Intacct</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Original_Bill_To_Ship_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Original Bill To/Ship To</label>
        <referenceTo>Bill_To_Ship_To__c</referenceTo>
        <relationshipLabel>Reflagged To</relationshipLabel>
        <relationshipName>Bill_To_Ship_To</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Primary__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Primary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Secondary_Email__c</fullName>
        <label>Secondary Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Ship_To__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ship To</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street_1__c</fullName>
        <label>Street 1</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street_2__c</fullName>
        <label>Street 2</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Taxable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Taxable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Zip_Postal_Code__c</fullName>
        <label>Zip/Postal Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Bill To/Ship To</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Bill To/Ship To Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bill To/Ship To</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <validationRules>
        <fullName>Country_Field_Validation</fullName>
        <active>false</active>
        <description>Only allows country values of "United State" and "Canada"</description>
        <errorConditionFormula>NOT((Country__c == 'US') || (Country__c == 'USA') || (Country__c == 'United States') || (Country__c == 'United States of America') || (Country__c == 'Canada'))</errorConditionFormula>
        <errorDisplayField>Country__c</errorDisplayField>
        <errorMessage>Must enter country values of United States and Canada</errorMessage>
    </validationRules>
</CustomObject>